--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.stack-work/
+TextAdventureEngine.cabal
+*~
 dist
 dist-*
 cabal-dev
@@ -15,7 +18,6 @@ cabal.sandbox.config
 *.aux
 *.hp
 *.eventlog
-.stack-work/
 cabal.project.local
 cabal.project.local~
 .HTF/
