Most basic room structure

--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                TextAdventureEngine
 version:             0.1.0.0
-github:              "githubuser/TextAdventureEngine"
+github:              "MarcusVoelker/TextAdventureEngine"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2019 Author name here"
+author:              "Marcus Völker"
+maintainer:          "marcus.voelker@rwth-aachen.de"
+copyright:           "2019 Marcus Völker"
 
 extra-source-files:
 - README.md
@@ -12,7 +12,6 @@ extra-source-files:
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
-# category:            Web
 
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
@@ -21,6 +20,8 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- containers
+- transformers
 
 library:
   source-dirs: src
