LookAt, initial sound

--- a/package.yaml
+++ b/package.yaml
@@ -23,9 +23,13 @@ dependencies:
 - containers
 - transformers
 - LParse >= 0.3.1
+- proteaaudio
+- bytestring
+- filepath
 
 library:
   source-dirs: src
+  default-extensions: TupleSections
 
 executables:
   TextAdventureEngine-exe:
