--- a/stack.yaml
+++ b/stack.yaml
@@ -41,6 +41,7 @@ packages:
 #
 extra-deps:
 - LParse-0.3.1.0
+- proteaaudio-0.7.1.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
