--- a/stack.yaml
+++ b/stack.yaml
@@ -42,7 +42,7 @@ packages:
 extra-deps:
 - LParse-0.3.1.0
 - proteaaudio-0.7.1.0
-
+- ansi-terminal-0.9.1
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
