--- a/package.yaml
+++ b/package.yaml
@@ -54,6 +54,7 @@ tests:
   TextAdventureEngine-test:
     main:                Spec.hs
     source-dirs:         test
+    default-extensions: ExistentialQuantification
     ghc-options:
     - -threaded
     - -rtsopts
