--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ before_install:
 - travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
 - sudo apt-get -y install freeglut3
 - sudo apt-get -y install freeglut3-dev
+- sudo apt-get -y install libpulse-dev
 
 install:
 # Build dependencies
