Not sure where this is (and a hard drive died inbetween) so I might as well commit this

--- a/package.yaml
+++ b/package.yaml
@@ -28,7 +28,10 @@ dependencies:
 - utf8-string
 - filepath
 - lens
-- gloss
+- GLFW-b
+- OpenGL
+- OpenGLRaw
+- GLURaw
 
 library:
   source-dirs: src
