--- a/package.yaml
+++ b/package.yaml
@@ -28,10 +28,8 @@ dependencies:
 - utf8-string
 - filepath
 - lens
-- GLFW-b
 - OpenGL
-- OpenGLRaw
-- GLURaw
+- GLUT
 
 library:
   source-dirs: src
